# ChangeLog for app-admin/webapp-config
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/app-admin/webapp-config/ChangeLog,v 1.63 2008/04/03 10:24:04 hollow Exp $

  03 Apr 2008; Benedikt Böhm <hollow@gentoo.org>
  webapp-config-1.50.16-r1.ebuild, -webapp-config-1.50.16-r2.ebuild,
  webapp-config-1.50.16-r3.ebuild:
  fix #213436

*webapp-config-1.50.16-r3 (17 Feb 2008)

  17 Feb 2008; Benedikt Böhm <hollow@gentoo.org>
  +files/webapp-config-1.50.16-absolute-paths.patch,
  +files/webapp-config-1.50.16-htdocs-symlink.patch,
  +webapp-config-1.50.16-r3.ebuild:
  fix #166853, #181938, #206669

*webapp-config-1.50.16-r2 (09 Sep 2007)

  09 Sep 2007; Benedikt Böhm <hollow@gentoo.org>
  +files/webapp-config-1.50.16-baselayout2.patch,
  -webapp-config-1.50.15.ebuild, -webapp-config-1.50.16.ebuild,
  +webapp-config-1.50.16-r2.ebuild:
  fix functions.sh usage for baselayout-2

  24 Aug 2007; Samuli Suominen <drac@gentoo.org>
  webapp-config-1.50.16-r1.ebuild:
  String comparison, not integer.

  03 Aug 2007; Christoph Mende <angelos@gentoo.org>
  webapp-config-1.50.16-r1.ebuild:
  Stable on amd64 wrt bug #187081

  01 Aug 2007; Joshua Kinard <kumba@gentoo.org>
  webapp-config-1.50.16-r1.ebuild:
  Stable on mips, per #187081.

  30 Jul 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  webapp-config-1.50.16-r1.ebuild:
  ppc stable, bug #187081

  30 Jul 2007; Jeroen Roovers <jer@gentoo.org>
  webapp-config-1.50.16-r1.ebuild:
  Stable for HPPA (bug #187081).

  30 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  webapp-config-1.50.16-r1.ebuild:
  Stable on sparc wrt #187081

  30 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  webapp-config-1.50.16-r1.ebuild:
  alpha/ia64/x86 stable wrt #187081

  30 Jul 2007; Markus Rothe <corsair@gentoo.org>
  webapp-config-1.50.16-r1.ebuild:
  Stable on ppc64; bug #187081

*webapp-config-1.50.16-r1 (29 Jul 2007)

  29 Jul 2007; Benedikt Böhm <hollow@gentoo.org>