@@ -4,6 +4,6 @@ AUX webapp-config-1.50.16-baselayout2.patch 511 RMD160 cfe440f27a29d0db4b536db5b
 AUX webapp-config-1.50.16-htdocs-symlink.patch 509 RMD160 ad53b2107e5f51626f3996925c9562d77fc1fdb5 SHA1 0adaefe78f272f32a939f56f941634c7f3c8ed6a SHA256 24e48a42f2b08010ad25f5f83bf4f3f47686fbcd786c0547e95c054cf7021b75
 AUX webapp-config-1.50.16-prefix.patch 9298 RMD160 d73a7b49d7fb3c8e40a435388daa8d0c9b3e7ef8 SHA1 75c0f15249ea6b50a876a3bf109cc9120912a2ba SHA256 cfe48d7db28a225b4fe0c9cff6086c3d6ca78efa07620b7b71a6f3cdb42d5b98
 DIST webapp-config-1.50.16.tar.gz 103576 RMD160 d3ab1b27d9b279241d2c9ff3b764ac0b9699b0a0 SHA1 dae0b27bf731116516aed16fd10dc75c0146d332 SHA256 cd5cf95d0abc9b469b08e6fffa885df10d3651d558164d35efe8e45df1fc8a5f
-EBUILD webapp-config-1.50.16-r3.ebuild 2205 RMD160 cfb6b3c64381f697e54727fe920077d2d8832499 SHA1 e82081a0939202e94fdfb8385569e7c19fc99294 SHA256 08327b05e76adb48384a66748b9f7fea3a18df45505307f2bd3f5cd4a81f83f7
-MISC ChangeLog 22905 RMD160 7ac18a13ed3c49f656b699542fe011c50d897456 SHA1 8fa17364c0fbedaba549383504360ff77959f751 SHA256 88216ba53ec3edba1001ded907e0591213da8d8e6c3765a1562595833ebbc52f
+EBUILD webapp-config-1.50.16-r3.ebuild 2188 RMD160 cbf89329bb62def341023ab9a5a0bef1bf0fba2a SHA1 407a59c4144f01957e1d1af11f08d3c825e8cfba SHA256 6fec2977776c8abea0d9062d46dee34f963ea726056e7e59a8fc921115244d62
+MISC ChangeLog 23043 RMD160 9fbca387c13b6fcac9ad6196d550f7e23aa9e8cb SHA1 ea84aee5cf2dcad87470a8a36d7c3d4b057c888b SHA256 7f6eef291ba92cc044b118ba7094a79818d42d33c9af9615380f79e168a71613
 MISC metadata.xml 225 RMD160 7081530104e84534030353cb15c4a541bb8d5e05 SHA1 af63626385169ab58c44695ebe4df705d455f94b SHA256 0986f8971072c8d055fccbc67cc59ac43eecd1f5592cd9c0ae729b23e550cc96
